--- a/mongo.config
+++ b/mongo.config
@@ -1,3 +1,3 @@
 port=27017
-dbpath=C:\Users\Gregor\Documents\Entwicklung\ws\emf-mongodb\mongodb\data
-logpath=C:\Users\Gregor\Documents\Entwicklung\ws\emf-mongodb\mongo.log
+dbpath=.\mongodb\data
+logpath=.\mongodb\mongo.log
