--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>2.12.3</version>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>4.3.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.emfjson</groupId>
